--- a/src/assets/scss/abstracts/variables/_colors.scss
+++ b/src/assets/scss/abstracts/variables/_colors.scss
@@ -1,21 +1,12 @@
 $colors: (
-    mid-red: #cf5e40,
-    mid-brown: #cf8040,
-    sunburst: linear-gradient(to bottom, #cf8040, #cf5e40),
-    dark-brown: #441d17,
-    desat-red: #848692,
-    desat-orange: #bdb3aa,
-    light-yellow: #f2f0e9,
-    light-orange: #f5f3f0,
-    light-grey: #eeeef3,
-    white: #ffffff,
-    water-yellow: #f5cc6a,
-    water-red: #ed796a,
-    water-blue: #81a3db,
-    water-green: #81dbbe,
-    water-purple: #9194bd,
-    logo-bg: #401913,
-    logo-bg-hover: #ffffff,
-    hero-bg: #F8F8F6,
-    hero-border: #EEEEF3
+    orange: #FF8103,
+    light-orange: #FDEFD8,
+    brown: #441D17,
+    light-brown: rgb(134, 78, 70),
+    red: #F55A46,
+    blue: #6297EC,
+    green: rgb(110, 253, 165),
+    light-grey: #EEEEF3,
+    white: #FFFFFF,
+    black: #131212
 );
