initial services and about page

--- a/src/assets/scss/abstracts/variables/_backgrounds.scss
+++ b/src/assets/scss/abstracts/variables/_backgrounds.scss
@@ -1,5 +1,5 @@
-$background-primary: getColor(white);
-$background-secondary:  getColor(light-grey-alpha);
-$background-dark:  getColor(indigo);
-$background-branded:  getColor(green-light-tint);
-$background-brand:  getColor(deep-indigo);
+$background-primary: getColor(fc-white);
+$background-secondary:  getColor(fc-light-gray);
+$background-dark:  getColor(fc-brown);
+$background-branded:  getColor(fc-orange);
+$background-brand:  getColor(fc-light-orange);
