--- a/src/assets/scss/abstracts/variables/_colors.scss
+++ b/src/assets/scss/abstracts/variables/_colors.scss
@@ -1,12 +1,14 @@
 $colors: (
-    orange: #FF8103,
-    light-orange: #FDEFD8,
-    brown: #441D17,
-    light-brown: rgb(134, 78, 70),
-    red: #F55A46,
-    blue: #6297EC,
-    green: rgb(110, 253, 165),
-    light-grey: #EEEEF3,
-    white: #FFFFFF,
-    black: #131212
+    fc-orange: #ff8103,
+    fc-faded-orange: rgba(255, 144, 32, 0.26),
+    fc-light-orange: #FDEFD8,
+    fc-brown: #441D17,
+    fc-light-brown: rgb(134, 78, 70),
+    fc-red: #F55A46,
+    fc-blue: #6297EC,
+    fc-green: rgb(110, 253, 165),
+    fc-light-gray: rgb(226, 226, 229),
+    fc-gray: #818181,
+    fc-white: #ffffff,
+    fc-black: #3f3f3f
 );
