--- a/src/assets/scss/abstracts/variables/_fonts.scss
+++ b/src/assets/scss/abstracts/variables/_fonts.scss
@@ -1,4 +1,4 @@
-$font_family: 'Roboto', Helvetica, Arial, sans-serif;
+$font_family: 'Muli', sans-serif;
 
 $font-1: 700 26px/26px $font_family;
 $font-2: 700 18px/22px $font_family;
@@ -12,5 +12,18 @@ $font-body: 400 13px/18px $font_family;
 $font-list: 400 12px/18px $font_family;
 $font-label: 400 11px/16px $font_family;
 $font-hero-title: 700 38px/38px $font-family;
+$font-menu: 300 16px/21px $font_family;
 
 $font-caption: 700 10px/14px $font_family;
+
+$font-title: 800 36px/48px $font_family;
+
+$font-title-mobile: 800 34px/48px $font_family;
+
+$font-subtitle: 400 18px/24px $font_family;
+
+$font-subtitle-mobile: 400 14px/21px $font_family;
+
+$font-section: 700 26px/32px $font_family;
+
+$font-section-mobile: 700 20px/26px $font_family;
