--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -1,23 +1,41 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url('/fonts/Roboto-Regular.eot');
-    src: url('/fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/Roboto-Regular.woff2') format('woff2'),
-        url('/fonts/Roboto-Regular.woff') format('woff'),
-        url('/fonts/Roboto-Regular.ttf') format('truetype'),
-        url('/fonts/Roboto-Regular.svg#Roboto-Regular') format('svg');
+    font-family: 'Muli', sans-serif;
+    src: url('/fonts/Muli-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Muli', sans-serif;
+    src: url('/fonts/Muli-LightItalic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Muli', sans-serif;
+    src: url('/fonts/Muli-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Roboto';
-    src: url('/fonts/Roboto-Bold.eot');
-    src: url('/fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/Roboto-Bold.woff2') format('woff2'),
-        url('/fonts/Roboto-Bold.woff') format('woff'),
-        url('/fonts/Roboto-Bold.ttf') format('truetype'),
-        url('/fonts/Roboto-Bold.svg#Roboto-Bold') format('svg');
+    font-family: 'Muli', sans-serif;
+    src: url('/fonts/Muli-Italic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Muli', sans-serif;
+    src: url('/fonts/Muli-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
+}
+
+@font-face {
+    font-family: 'Muli', sans-serif;
+    src: url('/fonts/Muli-BoldItalic.ttf') format('truetype');
+    font-weight: 700;
+    font-style: italic;
 }
