Addition website functionalities and content

--- a/src/assets/scss/abstracts/variables/_breakpoints.scss
+++ b/src/assets/scss/abstracts/variables/_breakpoints.scss
@@ -3,6 +3,7 @@ $breakpoints: (
     msmall: 600px,
     mobile: 850px,
     tablet: 1030px,
-    desktop: 1200px,
+    desktop: 1680px,
+    ldesktop: 1920px,
     selectors: 1580px
 );
