--- a/src/screens/Home/components/Splash/Splash.scss
+++ b/src/screens/Home/components/Splash/Splash.scss
@@ -1,10 +1,14 @@
 @import '../../../../assets/scss/main';
 
 .splash {
-    margin-top: $spacing * 20;
+    margin-top: $spacing * 16;
+    padding-top: $spacing * 4;
     min-height: 890px;
     position: relative;
     overflow: hidden;
+    background: url('/images/bg_01.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 
     &__statement {
         padding-top: $spacing * 12;
