--- a/src/screens/Home/components/Pricing/Pricing.scss
+++ b/src/screens/Home/components/Pricing/Pricing.scss
@@ -18,6 +18,10 @@
             color: getColor(fc-gray);
             font-weight: 600;
             margin-bottom: $spacing * 2;
+
+            @include breakpoint(mobile) {
+                font-size: 14px;
+            }
         }
     }
 
@@ -28,6 +32,10 @@
 
     &__addons {
         font-size: 21px;
+
+        @include breakpoint(mobile) {
+            font-size: 14px;
+        }
 
         &__switch {
             margin-top: $spacing * 2;
@@ -100,12 +108,19 @@
                 -webkit-box-shadow: 0 5px 40px rgba(0,0,0,.05);
                 box-shadow: 0 5px 40px rgba(0,0,0,.05);
                 padding: $spacing * 4;
+
+                &__business {
+                    @include breakpoint(mobile) {
+                        margin-top: $spacing * 5;
+                    }
+                }
     
                 &__title {
                     font-size: $spacing * 3;
                     color: getColor(fc-black);
                     font-weight: 700;
                     transition: .3s linear;
+                    line-height: 1.4;
     
                     &:hover {
                         color: getColor(fc-orange);
@@ -119,13 +134,15 @@
                 }
     
                 &__list {
-                    
-
                     > li {
                         font-size: 18px;
                         font-style: italic;
                         position: relative;
                         color: getColor(fc-gray);
+
+                        @include breakpoint(mobile) {
+                            font-size: 16px;
+                        }
 
                         &:not(:last-child) {
                             margin-bottom: 20px;
@@ -138,6 +155,11 @@
 
                         > span {
                             padding-left: $spacing * 4;
+                            line-height: 1.4;
+
+                            @include breakpoint(mobile) {
+                                padding-left: $spacing * 2;
+                            }
                         }
                     }
 
