--- a/src/screens/Home/components/About/About.scss
+++ b/src/screens/Home/components/About/About.scss
@@ -1,7 +1,7 @@
 @import '../../../../assets/scss/main';
 
 .about {
-    margin-top: $spacing * 20;
+    padding-top: $spacing * 20;
     min-height: 890px;
     position: relative;
     overflow: hidden;
@@ -12,9 +12,14 @@
 
     &__statement {
         padding-top: $spacing * 8;
+
+        @include breakpoint(mobile) {
+            margin-bottom: $spacing * 5;
+        }
     }
 
     @include breakpoint(mobile) {
-        margin-top: $spacing * 5;
+        margin-top: $spacing * 2;
+        padding-top: $spacing * 2;
     }
 }
