Adjust faded orange

--- a/src/assets/scss/abstracts/variables/_colors.scss
+++ b/src/assets/scss/abstracts/variables/_colors.scss
@@ -1,6 +1,6 @@
 $colors: (
     fc-orange: #ff8103,
-    fc-faded-orange: rgba(255, 144, 32, 0.26),
+    fc-faded-orange: #ffdfbf,
     fc-light-orange: #FDEFD8,
     fc-brown: #441D17,
     fc-light-brown: rgb(134, 78, 70),
