--- a/src/screens/Contact/Contact.scss
+++ b/src/screens/Contact/Contact.scss
@@ -52,6 +52,7 @@
                 margin-right: $spacing * 4;
                 font-size: $spacing * 4;
                 color: getColor(fc-orange);
+                min-width: $spacing * 5;
             }
 
             &__title {
