--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -49,7 +49,8 @@
 
                         &__image {
                             margin-right: 16px;
-                            width: 80px; 
+                            width: 80px;
+                            min-width: 80px; 
                         }
 
                         &__title {
