--- a/src/screens/Home/components/Services/Services.scss
+++ b/src/screens/Home/components/Services/Services.scss
@@ -13,7 +13,15 @@
 
     &__card {
         border: none;
-        height: $spacing * 60;
+        min-height: $spacing * 60;
+        max-height: $spacing * 65;
+        margin-bottom: $spacing * 3;
+        cursor: pointer;
+        transition: ease-in-out 0.3s;
+
+        &:hover {
+            background-color: getColor(fc-light-orange);
+        }
 
         @include breakpoint(mobile) {
             margin-top: $spacing * 2;
@@ -26,7 +34,8 @@
             padding: ($spacing * 10) ($spacing * 4);
 
             &__image {
-                min-height: $spacing * 20; 
+                min-height: $spacing * 22; 
+                max-height: $spacing * 22;
             }
 
             &__title {
@@ -56,7 +65,6 @@
     }
 
     &__statement {
-        padding-top: $spacing * 8;
-        text-align: center;
+        padding-top: $spacing * 5;
     }
 }
